nerv/main/cluster/apps/luncher-box/frontend/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: luncher-box-frontend
  namespace: apps
spec:
  parentRefs:
    - name: external
      namespace: networking-system
  hostnames:
    - luncherbox.deliprods.com
  rules:
    - backendRefs:
        - name: luncher-box-frontend
          port: 3000
